<resources>
    <string name="app_name">Baking App</string>

    <!-- Main Activity Class -->
    <string name="servings_with_variable_int">Servings: %1$d</string>

    <!-- activity_main.xml.xml -->
    <string name="no_recipes_found">No Recipes Found</string>
    <string name="poor_internet_connection">Poor Internet Connection</string>
    <string name="click_below_button_to_refresh">Click below button to refresh</string>
    <string name="recipe_image">Recipe Image</string>

    <!-- Recipe Steps Master Fragment Class -->
    <string name="ingredients">Ingredients</string>

    <!-- activity_recipe_steps_detail.xml -->
    <string name="previous_step">Previous Step</string>
    <string name="next_step">Next Step</string>
    <string name="recipe_step_image">Recipe Step Image</string>
    <string name="retry">Retry</string>
    <string name="add_widget">Add widget</string>

    <!-- app_widget_ingredients_list.xml -->
    <string name="refresh">Refresh</string>
    <string name="change_recipe">Change Recipe</string>

    <!-- launcher_app_widget -->
    <string name="launcher_app_content_description">Baking App Icon</string>

    <!-- activity_ingredients_widget_configure -->
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="widget_configuration_title_long">"Please, Select which Recipe to see it\'s ingredients in the widget."</string>

    <!-- Ingredients Widget Configure Activity -->
    <string name="widget_configuration_title_short">Widget Configuration</string>

    <!-- item_widget_configuration -->
    <string name="recipe_is_selected">Recipe is selected</string>

    <!-- AndroidManifest.xml -->
    <string name="ingredients_list">IngredientsList</string>
    <string name="app_launcher">App Launcher</string>

</resources>
